# faso-civic

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cadrage-plateforme-civique-v2.md  docker-compose.prod.yml  docker-compose.yml  rapport-sources-donnees-temps-reel.md
backend/: Dockerfile  alembic.ini  fusion_etablissements_2026-07-22.csv  fusion_propositions.csv  fusion_regions_2026-07-23.csv  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1971bfb3886c_decisions_et_structuration_cr.py  44a7016dcb59_structure_canonique.py  47cbc2891edc_membres_du_gouvernement.py  48200271c853_photo_url_membre_gouvernement.py  5edc2dbc742d_schema_initial.py  5fdbd4d6d5a6_marche_autorite_nullable.py  6a4580e4b593_deputes.py  6c023fffaa3e_dotation_budgetaire.py  740a30fefef4_finances_engagements_et_budgets.py  957b8d6194cf_matricules_personne_nomination.py  9b19367fcb72_repartition_budgetaire.py  aa89435d2dd0_marche_attributions.py  b3e7c1a9f2d4_marche_secteur.py  c10176c3eb33_genre_membre_gouvernement.py  c4f1a2b3d5e6_realisations_localites.py  d5a2b6c7e8f9_realisation_liaison.py  e19bc4da71a6_role_depute.py
backend/app/: admin.py  annuaire.py  annuaire_succession.py  annuaire_taxonomie.py  config.py  db.py  desambiguisation.py  fusion.py  geo.py  geo_seed.py  main.py  models.py  realisations_seed.py  validation.py
backend/app/api/: routes.py  rss.py
backend/app/data/: localites_bf.SOURCE.txt  (+2 more)
backend/templates/: a_valider.html
backend/tests/: test_annuaire_succession.py  test_annuaire_taxonomie.py  test_api.py  test_geo.py  test_realisations.py
(+87 files in other folders)
