[project]
name = "faso-civic"
version = "0.1.0"
description = "Plateforme civique Burkina Faso — agrégation d'informations publiques officielles"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqladmin>=0.18",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "selectolax>=0.3",
    "feedparser>=6.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "apscheduler>=3.10,<4",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
